Fix z-index bug

--- a/src/components/OrgFile/components/ActionDrawer/stylesheet.css
+++ b/src/components/OrgFile/components/ActionDrawer/stylesheet.css
@@ -8,6 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  z-index: 2;
 }
 
 .action-drawer__btn {
