--- a/src/components/OrgFile/components/HeaderList/stylesheet.css
+++ b/src/components/OrgFile/components/HeaderList/stylesheet.css
@@ -1,6 +1,8 @@
 .header-list-container {
   font-family: Courier;
   margin-top: 10px;
+
+  z-index: 1;
 }
 
 .header-list-container--focused {
